<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:checkable="true"
                android:icon="@drawable/home"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_profile"
                android:checkable="true"
                android:icon="@drawable/useravatar"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_notifications"
                android:checkable="true"
                android:icon="@drawable/notify"
                android:title="@string/notify" />
            <item
                android:id="@+id/nav_settings"
                android:checkable="true"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:checkable="true"
                android:icon="@drawable/exit"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/about"
                android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help"
            />

    </group>

</menu>
