<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnAddAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBackgound"
        android:text="@string/addAd"
        android:textColor="@android:color/background_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnAddAd"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hintAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/addProductIndication"
                android:textAlignment="inherit"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/productName"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/productNameInput"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edit_text"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/productDescription"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/productDescriptionInput"
                android:layout_width="360dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edit_text"
                android:backgroundTint="@android:color/background_light"
                android:inputType="textMultiLine"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scrollbars="vertical" />

            <LinearLayout
                android:id="@+id/addPhotoArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:weightSum="2.5">

                <LinearLayout
                    android:id="@+id/editText7"
                    android:layout_width="0dp"
                    android:layout_height="142dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_edit_text"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:id="@+id/imgUpload"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/photocamera" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/btnAddPhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/addPhoto"
                    android:textAlignment="center"
                    android:textColor="@color/darkGrey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:weightSum="2.5">

                <TextView
                    android:id="@+id/productCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/productCategory"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />

                <Spinner
                    android:id="@+id/spinnerProductCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1.5"
                    android:background="@android:color/background_light"
                    android:entries="@array/productType"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="4.4">

                <TextView
                    android:id="@+id/productExpirationDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/availability"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/dayInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/border_edit_text"
                    android:hint="@string/day"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/darkGrey" />

                <Spinner
                    android:id="@+id/monthInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/border_edit_text"
                    android:entries="@array/months"
                    android:hint="@string/month"
                    android:textAlignment="center"
                    android:textColor="@color/darkGrey" />

                <EditText
                    android:id="@+id/yearInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/border_edit_text"
                    android:hint="@string/year"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/darkGrey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:weightSum="2.75">

                <TextView
                    android:id="@+id/productDetails"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1.25"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/productDetails"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>

            <EditText
                android:id="@+id/productDetailsInput"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1.5"
                android:background="@android:color/background_light"
                android:inputType="textMultiLine"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scrollbars="vertical" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:weightSum="2.75">

                <TextView
                    android:id="@+id/adTime"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="Durata valabilitate anunt(zile)"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/adDurata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_weight="0.75"
                    android:background="@drawable/border_edit_text"
                    android:ems="10"
                    android:inputType="number" />


            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1.25" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
