<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eco.org.greenapp.eco.org.greenapp.activities.SignIn"
    tools:layout_editor_absoluteY="81dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@color/backgroundLight"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:drawableLeft="@drawable/padlock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/lora_regular"
            android:hint="@string/password"

            android:textColorLink="@color/colorAccentMild"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthenticate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:drawableLeft="@drawable/useravatar"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/lora_regular"
            android:hint="@string/usernameOrPassword"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorAccentMild"
            app:layout_constraintBottom_toTopOf="@+id/userPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInPhoto" />

        <ImageView
            android:id="@+id/logInPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/earthh"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAuthenticate"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_log_in"
            android:elegantTextHeight="true"
            android:fontFamily="@font/nanum_gothic_regular"
            android:text="@string/signin"
            android:textColor="@color/accent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:background="@drawable/button_sign_in"
        android:elegantTextHeight="true"
        android:fontFamily="@font/nanum_gothic_regular"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</android.support.constraint.ConstraintLayout>
